finally adding linux FreeType

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,7 +77,7 @@ endif()
 target_link_libraries(PixelEngine PRIVATE ${OPENGL_LIBRARIES})
 target_link_libraries(PixelEngine PRIVATE glfw)
 target_link_libraries(PixelEngine PRIVATE assimp)
-target_link_libraries(PixelEngine PRIVATE ${FREETYPE_LIBRARIES})
+target_link_libraries(PixelEngine PRIVATE freetype)
 if(NOT WIN32)
 target_link_libraries(PixelEngine PRIVATE OpenAL)
 endif()
